--- a/rpc_deployment/ansible.cfg
+++ b/rpc_deployment/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+log_path = /openstack/log/ansible-logging/ansible.log
 gathering = smart
 hostfile = inventory
 host_key_checking = False
