--- a/etc/rpc_deploy/conf.d/swift.yml
+++ b/etc/rpc_deploy/conf.d/swift.yml
@@ -14,6 +14,8 @@ global_overrides:
           name: default
           index: 0
           default: True
+    account:
+    container:
 swift-proxy_hosts:
   aio1:
     ip: 172.29.236.100
