Use the older container cache
To better mimic the juno deployments and to be more
compatible with the base Ubuntu Trusty (14.04.0)
installation being used, use the old container cache.

In the AIO bootstrap the cache is adjusted to ensure
that it doesn't get any updated packages and that it
is using the base packages that matter.

--- a/rpc_deployment/roles/lxc_common/tasks/lxc_container_cache.yml
+++ b/rpc_deployment/roles/lxc_common/tasks/lxc_container_cache.yml
@@ -15,7 +15,7 @@
 
 - name: Download lxc cache
   get_url:
-    url: "{{ rpc_repo_url }}/rpc-trusty-container.tgz"
+    url: "{{ rpc_repo_url }}/container_images/rpc-trusty-container.old.tgz"
     dest: "/var/cache/lxc/rpc-trusty-container.tgz"
     mode: "0440"
   register: cache_download
